update: 优化代码质量、性能与架构，新增配置化性能参数
- 修复并发安全问题：LinkManager.pendingRemovals改用原子操作，CacheManager使用读写锁替代synchronized
- 修复内存泄漏：CacheManager实现LRU缓存机制，FaceConfigComposite添加全局缓存大小限制
- 优化线程池资源管理：为保存线程池添加异常处理器和优雅关闭机制
- 增强错误处理：改进onBlocksRemovedBulk方法，分别跟踪不同类型的失败操作
- 重构权限服务：PermissionService改为单例模式，避免重复创建实例
- 统一配置管理：创建LogisticsConstants类集中管理所有配置常量，按功能分类
- 新增性能参数配置化：将缓存、网络、性能相关参数迁移到配置文件，支持热重载
- 优化字符串比较：将所有不安全的字符串比较替换为Objects.equals()，防止空指针异常
- 新增便捷方法：LogisticsNode添加isInSameDimension()，统一维度比较逻辑
- 简化代码：使用Java 16+的toList()简化Stream API，代码更简洁高效
- 更新文档：新增README和README_ZH，提供完整的使用指南和配置说明
- 升级版本号：从1.1-SNAPSHOT升级至1.1.1-SNAPSHOT，更新mod描述